tests/integration_tests/snapshots/integration__integration_tests__git_error_display__branch_already_exists.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mBranch [1mfeature[22m already exists[39m
[2m↳[22m [2mTo switch to the existing branch, run without [4m--create[24m: [4mwt switch feature[24m[22m
