tests/integration_tests/snapshots/integration__integration_tests__git_error_display__branch_not_found_never_fetched.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.to_string()
---
[31m✗[39m [31mNo branch named [1mnonexistent[22m[39m
[2m↳[22m [2mTo create a new branch, run [4mwt switch --create nonexistent[24m; to list branches, run [4mwt list --branches --remotes[24m[22m
