tests/integration_tests/snapshots/integration__integration_tests__git_error_display__branch_not_found_no_create_hint.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mNo branch named [1mnonexistent[22m[39m
[2m↳[22m [2mTo list branches, run [4mwt list --branches --remotes[24m[22m
