tests/integration_tests/snapshots/integration__integration_tests__git_error_display__branch_not_found_numeric_unknown_platform.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mNo branch named [1m2474[22m[39m
[2m↳[22m [2mTo switch to PR #2474 or MR !2474, run [4mwt switch pr:2474[24m or [4mwt switch mr:2474[24m; to create a new branch, run [4mwt switch --create 2474[24m; to list branches, run [4mwt list --branches --remotes[24m[22m
