tests/integration_tests/snapshots/integration__integration_tests__git_error_display__cannot_remove_main_worktree.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mThe main worktree cannot be removed[39m
