tests/integration_tests/snapshots/integration__integration_tests__git_error_display__command_errors.snap
---
source: tests/integration_tests/git_error_display.rs
expression: render_cases(cases)
---
## non-interactive

[31m✗[39m [31mCannot prompt for approval in non-interactive environment[39m
[2m↳[22m [2mTo skip prompts in CI/CD, add [4m--yes[24m; to pre-approve commands, run [4mwt config approvals add --yes[24m[22m

## LLM command failed

[31m✗[39m [31mCommit generation command failed[39m
[107m [0m Error: API key not found
[2m○[22m Ran command:
[107m [0m llm --model claude

## LLM command failed with reproduction

[31m✗[39m [31mCommit generation command failed[39m
[107m [0m Error: API key not found
[2m○[22m Ran command:
[107m [0m wt step commit --show-prompt | llm --model claude

## project config missing

[31m✗[39m [31mNo project configuration found[39m
[2m↳[22m [2mCreate a config file at: [4m/tmp/repo/.config/wt.toml[24m[22m

## parse error

[31m✗[39m [31mInvalid branch name format[39m

## remote-only branch

[31m✗[39m [31mBranch [1mfeature[22m exists only on remote (origin/feature)[39m
[2m↳[22m [2mTo create a local worktree, run [4mwt switch feature[24m[22m

## other git error

[31m✗[39m [31mUnexpected git error[39m

## named hook failed

[31m✗[39m [31mpre-merge command [1mtest[22m failed (exit code 1)[39m

## unnamed hook failed

[31m✗[39m [31mpre-start command failed (exit code 127)[39m

## hook failed with skip hint

[31m✗[39m [31mpre-merge command [1mtest[22m failed (exit code 1)[39m
[2m↳[22m [2mTo skip pre-merge hooks, re-run with [4m--no-hooks[24m[22m
