tests/integration_tests/snapshots/integration__integration_tests__git_error_display__conflicting_changes.snap
---
source: tests/integration_tests/git_error_display.rs
expression: err.render()
---
[31m✗[39m [31mCan't push to local [1mmain[22m branch: conflicting uncommitted changes[39m
[107m [0m src/main.rs
[107m [0m src/lib.rs
[2m↳[22m [2mCommit or stash these changes in [4m/tmp/repo.main[24m first[22m
